--- a/mainapp/templates/checkout.html
+++ b/mainapp/templates/checkout.html
@@ -145,9 +145,12 @@
                     </div>
                 </div>
 
-                <button form="order" class="btn btn-primary btn-block mb-5" type="submit">
+                <button form="order" class="btn btn-primary btn-block mb-3" type="submit">
                     Перейти к оплате
                 </button>
+                <iframe src="https://yoomoney.ru/quickpay/shop-widget?writer=seller&targets=%D0%BF%D0%BE%D0%BA%D1%83%D0%BF%D0%BA%D0%B0%20%D0%B2%20%D0%B8%D0%BD%D1%82%D0%B5%D1%80%D0%BD%D0%B5%D1%82%20%D0%BC%D0%B0%D0%B3%D0%B0%D0%B7%D0%B8%D0%BD%D0%B5&targets-hint=&default-sum={{ total_order_price }}&button-text=11&payment-type-choice=on&hint=&successURL=http%3A%2F%2F127.0.0.1%3A8000%2Fcreate-order%2F&quickpay=shop&account=4100115937394182"
+                        width="250" height="280" frameborder="0" allowtransparency="true" scrolling="no"></iframe>
+
                 {% for product in cart.products.all %}
 
                     <div class="mb-3">
