--- a/mainapp/templates/cart.html
+++ b/mainapp/templates/cart.html
@@ -53,35 +53,35 @@
                     </tr>
                 </thead>
                 <tbody>
-                    {% for product in cart.products.all %}
+                    {% for object in cart.products.all %}
                         <tr>
                             <th scope="row">
-                                {{ product.id }}
+                                {{ object.product.id }}
                             </th>
                             <td>
-                                {{ product.content_object.title }}
+                                {{ object.product.title }}
                             </td>
                             <td>
-                                <a href="{{ product.content_object.get_absolute_url }}">
-                                    <img src="{{ product.content_object.image1.url }}" alt="" class="cart-img">
+                                <a href="{{ object.get_absolute_url }}">
+                                    <img src="{{ object.product.image1.url }}" alt="" class="cart-img">
                                 </a>
                             </td>
                             <td>
-                                {{ product.content_object.price }} ₽
+                                {{ object.product.price }} ₽
                             </td>
                             <td>
-                                <form action="{% url 'change_quantity' ct_model=product.content_object.get_model_name slug=product.content_object.slug %}"
+                                <form action="{% url 'change_quantity' slug=object.product.slug %}"
                                       method="post">
                                     {% csrf_token %}
-                                    <input type="number" name="quantity" value="{{ product.quantity }}" min="1" class="form-control quantity-input">
+                                    <input type="number" name="quantity" value="{{ object.quantity }}" min="1" class="form-control quantity-input">
                                     <br>
                                     <input type="submit" value="Изменить" class="btn btn-primary">
                                 </form>
                             </td>
                             <td>
-                                {{ product.total_price }} ₽
+                                {{ object.product.total_price }} ₽
                                 <div class="remove-icon">
-                                    <a href="{% url 'delete_from_cart' ct_model=product.content_object.get_model_name slug=product.content_object.slug %}">
+                                    <a href="{% url 'delete_from_cart' slug=object.product.slug %}">
                                         <svg width="1.5em" height="1.5em" viewBox="0 0 16 16" class="bi bi-trash" fill="red" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
                                             <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4L4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
