refactoring: delete Notebook & Smartphone models; Now Product is not an abstract model.

--- a/mainapp/templates/partials/categories.html
+++ b/mainapp/templates/partials/categories.html
@@ -3,7 +3,7 @@
     <div class="list-group">
         {% for category in categories %}
             <a href="{{ category.url }}" class="list-group-item">
-                {{ category.title }} ({{ category.count }})
+                {{ category.title }}
             </a>
         {% endfor %}
     </div>
