--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -3,18 +3,7 @@
 {% block content %}
     <div class="row">
         <div class="row col-lg-12">
-            {% if messages %}
-                {% for message in messages %}
-                    <div class="alert alert-success alert-dismissible fade show" role="alert">
-                        <span class="alert-text">
-                            {{ message }}
-                        </span>
-                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                          <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                {% endfor %}
-            {% endif %}
+            {% include 'partials/messages.html' %}
         </div>
 
         {% include 'partials/categories.html' %}
