--- a/templates/partials/product_card.html
+++ b/templates/partials/product_card.html
@@ -1,7 +1,7 @@
 <div class="col-lg-4 col-md-6 mb-4">
     <div class="card product-card h-100">
         <a href="{{ product.get_absolute_url }}" class="product-card__img-wrapper">
-            <img class="product-card__img card-img-top" src="{{ product.image1.url }}" alt="">
+            <img class="product-card__img card-img-top" src="{{ product.productphoto_set.first.image.url }}" alt="">
         </a>
         <div class="card-body">
             <h4 class="card-title">
