--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -6,7 +6,12 @@
             {% include 'partials/messages.html' %}
         </div>
 
-        {% include 'partials/categories.html' %}
+        <div class="col-lg-3">
+            <h1 class="my-4">
+                Категории
+            </h1>
+            {% include 'partials/categories.html' %}
+        </div>
         <!-- /.col-lg-3 -->
 
         <div class="col-lg-9">
