--- a/templates/product.html
+++ b/templates/product.html
@@ -6,19 +6,17 @@
     <nav class="mt-3" aria-label="breadcrumb">
         <ol class="breadcrumb">
             <li class="breadcrumb-item">
-                <a href="/">
+                <a href="{% url 'catalog' %}">
                     Главная
                 </a>
             </li>
             <li class="breadcrumb-item">
-                <a href="">
+                <a href="{{ product.category.get_absolute_url }}">
                     {{ product.category.title }}
                 </a>
             </li>
             <li class="breadcrumb-item active" aria-current="page">
-                <a href="{{ product.slug }}">
-                    {{ product.title }}
-                </a>
+                {{ product.title }}
             </li>
         </ol>
     </nav>
@@ -27,18 +25,17 @@
         <div class="col-md-8">
             <div id="carouselExampleControls" class="carousel slide carousel-fade" data-ride="carousel" data-interval="3000" data-touch="true">
                 <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="{{ product.image1.url }}" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="{{ product.image2.url }}" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="{{ product.image3.url }}" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="{{ product.image4.url }}" class="d-block w-100" alt="...">
-                    </div>
+                    {% for img_object in product.productphoto_set.all %}
+                        {% if img_object == product.productphoto_set.first %}
+                            <div class="carousel-item active">
+                                <img src="{{ img_object.image.url }}" class="d-block w-100" alt="...">
+                            </div>
+                        {% else %}
+                            <div class="carousel-item">
+                                <img src="{{ img_object.image.url }}" class="d-block w-100" alt="...">
+                            </div>
+                        {% endif %}
+                    {% endfor %}
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -60,8 +57,10 @@
                 {{ product.title }}
             </h3>
             <h4>
-                {{ product.price }} ₽
-                <a href="{% url 'add_to_cart' ct_model=ct_model slug=product.slug %}">
+                <span class="product-detail__price">
+                    {{ product.price }} ₽
+                </span>
+                <a href="{% url 'add_to_cart' slug=product.slug %}">
                     <button class="btn btn-danger">
                         Купить
                     </button>
@@ -71,7 +70,6 @@
                 <div class="p-2">
                     Характеристики
                 </div>
-
             </div>
         </div>
     </div>
