--- a/static/css/main.css
+++ b/static/css/main.css
@@ -109,30 +109,39 @@ li {
     padding-inline-start: 0 !important;
 }
 
-.login-wrapper {
+.auth-wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100%;
 }
 
-.login-block {
+.auth-block {
     margin-bottom: 10rem;
     padding: 0 20px;
     border: 1px solid #ced4da;
     border-radius: .25rem;
 }
 
-.login-h3 {
+.auth-h3 {
     text-align: center;
 }
 
-.login-form {
+.auth-form {
     display: flex;
     flex-direction: column;
+}
+
+.register-btn {
+    width: 12rem;
+    align-self: center;
 }
 
 .login-btn {
     width: 8rem;
     align-self: center;
+}
+
+.login-txt {
+    text-align: center;
 }
