basic email confirmation added

--- a/customers/templates/account.html
+++ b/customers/templates/account.html
@@ -6,8 +6,15 @@
     <h1>
         Account page
     </h1>
-    <a class="btn btn-danger" href="{% url 'logout' %}">
-        Выйти
-    </a>
+
+    {% if request.user.is_authenticated and request.user.is_active %}
+        <a class="btn btn-danger" href="{% url 'logout' %}">
+            Выйти
+        </a>
+    {% else %}
+        <p>
+            Not authenticated or active
+        </p>
+    {% endif %}
 
 {% endblock %}
